--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,12 @@ Flask-Migrate==4.0.5
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==22.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.0
 MarkupSafe==2.1.4
+packaging==24.1
 psycopg2==2.9.9
 pytz==2023.3.post1
 six==1.16.0
